# evade

./: .coverage  .gitignore  README.md  developer_guide.md  example.ipynb  pyproject.toml  requirements.txt  setup.py  volume_finder.py
.github/workflows/: python-app.yml
davee/: __init__.py  dihedrals.py  volumes.py
doc/source/: conf.py  davee.rst  evade.rst  get_volumes.rst  index.rst  modules.rst  scoops.rst  troubleshooting.rst  visualization.rst  volume_finder.rst
evade/: __init__.py  volumes.py
example/: dihedrals.ipynb  example.ipynb  show_mut_inf.pml  volumes.ipynb
scoops/: __init__.py  dihedrals.py  ops_from_volumes.py  volumes.py
scoops.egg-info/: PKG-INFO  SOURCES.txt
test/: get_values_for_dihedrals.ipynb  test_dihedrals.py
volume_finder/: .volume_finder.py.swp  __init__.py  dihedrals.py  ops_from_volumes.py  volume_finder.py  volumes.py
