[tool.poetry]
name = "scoops"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
#jupyter = "^1.0.0"
#ipykernel = "^6.18.3"
numpy = "^1.23.5"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
MDAnalysis = "^2.3.0"
trimesh = "^3.17.1"
pyvista = "^0.37.0"
ipywidgets = "7.7.1"
nglview = "^3.0.3"
numpy-indexed = "^0.3.5"
ipyvtklink = "^0.2.3"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
